[gd_scene load_steps=12 format=1]

[ext_resource path="res://assets/scripts/main.gd" type="Script" id=1]
[ext_resource path="res://assets/art/ui/speed/speed1.png" type="Texture" id=2]
[ext_resource path="res://assets/art/ui/turn/turn_left.png" type="Texture" id=3]
[ext_resource path="res://assets/art/ui/turn/turn_right.png" type="Texture" id=4]
[ext_resource path="res://assets/art/ui/zoom/zoom_p.png" type="Texture" id=5]
[ext_resource path="res://assets/art/ui/zoom/zoom_m.png" type="Texture" id=6]
[ext_resource path="res://assets/art/ui/formation/phalanx.png" type="Texture" id=7]
[ext_resource path="res://assets/art/ui/formation/box.png" type="Texture" id=8]
[ext_resource path="res://assets/art/ui/formation/wedge.png" type="Texture" id=9]
[ext_resource path="res://assets/art/ui/formation/care.png" type="Texture" id=10]
[ext_resource path="res://assets/art/ui/troop/test.png" type="Texture" id=11]

[node name="Game" type="Node2D"]

script/script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="ui" type="Control" parent="CanvasLayer"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 517.0
margin/right = 0.0
margin/bottom = 0.0

[node name="functionalPanel" type="Panel" parent="CanvasLayer/ui"]

anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 239.0
margin/top = 84.0
margin/right = 0.0
margin/bottom = 1.0

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/ui/functionalPanel"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
columns = 5

[node name="speed" type="Button" parent="CanvasLayer/ui/functionalPanel/GridContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 44.0
margin/bottom = 38.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 2 )
flat = false
align = 0

[node name="turn_l" type="Button" parent="CanvasLayer/ui/functionalPanel/GridContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 48.0
margin/top = 0.0
margin/right = 92.0
margin/bottom = 38.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 3 )
flat = false
align = 0

[node name="turn_r" type="Button" parent="CanvasLayer/ui/functionalPanel/GridContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 96.0
margin/top = 0.0
margin/right = 140.0
margin/bottom = 38.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 4 )
flat = false
align = 0

[node name="zoom_p" type="Button" parent="CanvasLayer/ui/functionalPanel/GridContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 144.0
margin/top = 0.0
margin/right = 188.0
margin/bottom = 38.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 5 )
flat = false
align = 0

[node name="zoom_m" type="Button" parent="CanvasLayer/ui/functionalPanel/GridContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 192.0
margin/top = 0.0
margin/right = 236.0
margin/bottom = 38.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 6 )
flat = false
align = 0

[node name="void" type="Panel" parent="CanvasLayer/ui/functionalPanel/GridContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 42.0
margin/right = 44.0
margin/bottom = 80.0

[node name="phalanx" type="Button" parent="CanvasLayer/ui/functionalPanel/GridContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 48.0
margin/top = 42.0
margin/right = 92.0
margin/bottom = 80.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 7 )
flat = false
align = 0

[node name="box" type="Button" parent="CanvasLayer/ui/functionalPanel/GridContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 96.0
margin/top = 42.0
margin/right = 140.0
margin/bottom = 80.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 8 )
flat = false
align = 0

[node name="wedge" type="Button" parent="CanvasLayer/ui/functionalPanel/GridContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 144.0
margin/top = 42.0
margin/right = 188.0
margin/bottom = 80.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 9 )
flat = false
align = 0

[node name="carre" type="Button" parent="CanvasLayer/ui/functionalPanel/GridContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 192.0
margin/top = 42.0
margin/right = 236.0
margin/bottom = 80.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 10 )
flat = false
align = 0

[node name="armyPanel" type="Panel" parent="CanvasLayer/ui"]

anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 150.0
margin/top = 84.0
margin/right = 240.0
margin/bottom = 1.0

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/ui/armyPanel"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
columns = 10

[node name="TArmy1" type="Button" parent="CanvasLayer/ui/armyPanel/GridContainer"]

rect/min_size = Vector2( 44, 38 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 44.0
margin/bottom = 38.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 11 )
flat = false

[node name="count" type="Label" parent="CanvasLayer/ui/armyPanel/GridContainer/TArmy1"]

anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 25.0
margin/top = 14.0
margin/right = 0.0
margin/bottom = 0.0
text = "120"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="rank" type="Label" parent="CanvasLayer/ui/armyPanel/GridContainer/TArmy1"]

anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 25.0
margin/top = 38.0
margin/right = 0.0
margin/bottom = 24.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TArmy2" type="Button" parent="CanvasLayer/ui/armyPanel/GridContainer"]

rect/min_size = Vector2( 44, 38 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 48.0
margin/top = 0.0
margin/right = 92.0
margin/bottom = 38.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="count" type="Label" parent="CanvasLayer/ui/armyPanel/GridContainer/TArmy2"]

anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 25.0
margin/top = 14.0
margin/right = 0.0
margin/bottom = 0.0
text = "000"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TArmy3" type="Button" parent="CanvasLayer/ui/armyPanel/GridContainer"]

rect/min_size = Vector2( 44, 38 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 96.0
margin/top = 0.0
margin/right = 140.0
margin/bottom = 38.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="count" type="Label" parent="CanvasLayer/ui/armyPanel/GridContainer/TArmy3"]

visibility/visible = false
anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 25.0
margin/top = 14.0
margin/right = 0.0
margin/bottom = 0.0
text = "000"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TArmy4" type="Button" parent="CanvasLayer/ui/armyPanel/GridContainer"]

rect/min_size = Vector2( 44, 38 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 144.0
margin/top = 0.0
margin/right = 188.0
margin/bottom = 38.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="count" type="Label" parent="CanvasLayer/ui/armyPanel/GridContainer/TArmy4"]

visibility/visible = false
anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 25.0
margin/top = 14.0
margin/right = 0.0
margin/bottom = 0.0
text = "000"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TArmy5" type="Button" parent="CanvasLayer/ui/armyPanel/GridContainer"]

rect/min_size = Vector2( 44, 38 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 192.0
margin/top = 0.0
margin/right = 236.0
margin/bottom = 38.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="count" type="Label" parent="CanvasLayer/ui/armyPanel/GridContainer/TArmy5"]

visibility/visible = false
anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 25.0
margin/top = 14.0
margin/right = 0.0
margin/bottom = 0.0
text = "000"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TArmy6" type="Button" parent="CanvasLayer/ui/armyPanel/GridContainer"]

rect/min_size = Vector2( 44, 38 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 240.0
margin/top = 0.0
margin/right = 284.0
margin/bottom = 38.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="count" type="Label" parent="CanvasLayer/ui/armyPanel/GridContainer/TArmy6"]

visibility/visible = false
anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 25.0
margin/top = 14.0
margin/right = 0.0
margin/bottom = 0.0
text = "000"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TArmy7" type="Button" parent="CanvasLayer/ui/armyPanel/GridContainer"]

rect/min_size = Vector2( 44, 38 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 288.0
margin/top = 0.0
margin/right = 332.0
margin/bottom = 38.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="count" type="Label" parent="CanvasLayer/ui/armyPanel/GridContainer/TArmy7"]

visibility/visible = false
anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 25.0
margin/top = 14.0
margin/right = 0.0
margin/bottom = 0.0
text = "000"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TArmy8" type="Button" parent="CanvasLayer/ui/armyPanel/GridContainer"]

rect/min_size = Vector2( 44, 38 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 336.0
margin/top = 0.0
margin/right = 380.0
margin/bottom = 38.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="count" type="Label" parent="CanvasLayer/ui/armyPanel/GridContainer/TArmy8"]

visibility/visible = false
anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 25.0
margin/top = 14.0
margin/right = 0.0
margin/bottom = 0.0
text = "000"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TArmy9" type="Button" parent="CanvasLayer/ui/armyPanel/GridContainer"]

rect/min_size = Vector2( 44, 38 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 384.0
margin/top = 0.0
margin/right = 428.0
margin/bottom = 38.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="count" type="Label" parent="CanvasLayer/ui/armyPanel/GridContainer/TArmy9"]

visibility/visible = false
anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 25.0
margin/top = 14.0
margin/right = 0.0
margin/bottom = 0.0
text = "000"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TArmy10" type="Button" parent="CanvasLayer/ui/armyPanel/GridContainer"]

rect/min_size = Vector2( 44, 38 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 432.0
margin/top = 0.0
margin/right = 476.0
margin/bottom = 38.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="count" type="Label" parent="CanvasLayer/ui/armyPanel/GridContainer/TArmy10"]

visibility/visible = false
anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 25.0
margin/top = 14.0
margin/right = 0.0
margin/bottom = 0.0
text = "000"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TArmy11" type="Button" parent="CanvasLayer/ui/armyPanel/GridContainer"]

rect/min_size = Vector2( 44, 38 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 42.0
margin/right = 44.0
margin/bottom = 80.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="count" type="Label" parent="CanvasLayer/ui/armyPanel/GridContainer/TArmy11"]

visibility/visible = false
anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 25.0
margin/top = 14.0
margin/right = 0.0
margin/bottom = 0.0
text = "000"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TArmy12" type="Button" parent="CanvasLayer/ui/armyPanel/GridContainer"]

rect/min_size = Vector2( 44, 38 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 48.0
margin/top = 42.0
margin/right = 92.0
margin/bottom = 80.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="count" type="Label" parent="CanvasLayer/ui/armyPanel/GridContainer/TArmy12"]

visibility/visible = false
anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 25.0
margin/top = 14.0
margin/right = 0.0
margin/bottom = 0.0
text = "000"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TArmy13" type="Button" parent="CanvasLayer/ui/armyPanel/GridContainer"]

rect/min_size = Vector2( 44, 38 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 96.0
margin/top = 42.0
margin/right = 140.0
margin/bottom = 80.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="count" type="Label" parent="CanvasLayer/ui/armyPanel/GridContainer/TArmy13"]

visibility/visible = false
anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 25.0
margin/top = 14.0
margin/right = 0.0
margin/bottom = 0.0
text = "000"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TArmy14" type="Button" parent="CanvasLayer/ui/armyPanel/GridContainer"]

rect/min_size = Vector2( 44, 38 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 144.0
margin/top = 42.0
margin/right = 188.0
margin/bottom = 80.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="count" type="Label" parent="CanvasLayer/ui/armyPanel/GridContainer/TArmy14"]

visibility/visible = false
anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 25.0
margin/top = 14.0
margin/right = 0.0
margin/bottom = 0.0
text = "000"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TArmy15" type="Button" parent="CanvasLayer/ui/armyPanel/GridContainer"]

rect/min_size = Vector2( 44, 38 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 192.0
margin/top = 42.0
margin/right = 236.0
margin/bottom = 80.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="count" type="Label" parent="CanvasLayer/ui/armyPanel/GridContainer/TArmy15"]

visibility/visible = false
anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 25.0
margin/top = 14.0
margin/right = 0.0
margin/bottom = 0.0
text = "000"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TArmy16" type="Button" parent="CanvasLayer/ui/armyPanel/GridContainer"]

rect/min_size = Vector2( 44, 38 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 240.0
margin/top = 42.0
margin/right = 284.0
margin/bottom = 80.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="count" type="Label" parent="CanvasLayer/ui/armyPanel/GridContainer/TArmy16"]

visibility/visible = false
anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 25.0
margin/top = 14.0
margin/right = 0.0
margin/bottom = 0.0
text = "000"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TArmy17" type="Button" parent="CanvasLayer/ui/armyPanel/GridContainer"]

rect/min_size = Vector2( 44, 38 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 288.0
margin/top = 42.0
margin/right = 332.0
margin/bottom = 80.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="count" type="Label" parent="CanvasLayer/ui/armyPanel/GridContainer/TArmy17"]

visibility/visible = false
anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 25.0
margin/top = 14.0
margin/right = 0.0
margin/bottom = 0.0
text = "000"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TArmy18" type="Button" parent="CanvasLayer/ui/armyPanel/GridContainer"]

rect/min_size = Vector2( 44, 38 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 336.0
margin/top = 42.0
margin/right = 380.0
margin/bottom = 80.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="count" type="Label" parent="CanvasLayer/ui/armyPanel/GridContainer/TArmy18"]

visibility/visible = false
anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 25.0
margin/top = 14.0
margin/right = 0.0
margin/bottom = 0.0
text = "000"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TArmy19" type="Button" parent="CanvasLayer/ui/armyPanel/GridContainer"]

rect/min_size = Vector2( 44, 38 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 384.0
margin/top = 42.0
margin/right = 428.0
margin/bottom = 80.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="count" type="Label" parent="CanvasLayer/ui/armyPanel/GridContainer/TArmy19"]

visibility/visible = false
anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 25.0
margin/top = 14.0
margin/right = 0.0
margin/bottom = 0.0
text = "000"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TArmy20" type="Button" parent="CanvasLayer/ui/armyPanel/GridContainer"]

rect/min_size = Vector2( 44, 38 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 432.0
margin/top = 42.0
margin/right = 476.0
margin/bottom = 80.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="count" type="Label" parent="CanvasLayer/ui/armyPanel/GridContainer/TArmy20"]

visibility/visible = false
anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 25.0
margin/top = 14.0
margin/right = 0.0
margin/bottom = 0.0
text = "000"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="mapPanel" type="Panel" parent="CanvasLayer/ui"]

editor/display_folded = true
anchor/top = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 147.0
margin/right = 150.0
margin/bottom = -1.0

[node name="map" type="TextureFrame" parent="CanvasLayer/ui/mapPanel"]

anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 150.0
margin/top = 148.0
margin/right = 0.0
margin/bottom = 0.0
expand = true
stretch_mode = 0

[node name="Camera2D" type="Camera2D" parent="."]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 2, 2 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
limit/smoothed = false
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="Players" type="Node" parent="."]

[node name="Player" type="Node" parent="Players"]

[node name="Units" type="Node" parent="Players/Player"]

[node name="Regiment1" type="Node" parent="Players/Player/Units"]

[node name="Regiment2" type="Node" parent="Players/Player/Units"]

[connection signal="pressed" from="CanvasLayer/ui/functionalPanel/GridContainer/speed" to="." method="_on_speed_pressed"]

[connection signal="pressed" from="CanvasLayer/ui/functionalPanel/GridContainer/turn_l" to="." method="_on_turn_l_pressed"]

[connection signal="pressed" from="CanvasLayer/ui/functionalPanel/GridContainer/turn_r" to="." method="_on_turn_r_pressed"]

[connection signal="pressed" from="CanvasLayer/ui/functionalPanel/GridContainer/phalanx" to="." method="_on_phalanx_pressed"]

[connection signal="pressed" from="CanvasLayer/ui/functionalPanel/GridContainer/box" to="." method="_on_box_pressed"]

[connection signal="pressed" from="CanvasLayer/ui/functionalPanel/GridContainer/wedge" to="." method="_on_wedge_pressed"]

[connection signal="pressed" from="CanvasLayer/ui/functionalPanel/GridContainer/carre" to="." method="_on_carre_pressed"]


